--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -2,9 +2,18 @@
     <li *ngFor="let entry of post.slice().reverse()">
         <div class="card">
             <h2>Post # {{entry.post_Id}}</h2>
-            <h5>by user {{entry.userName}}</h5>
-            <img src={{entry.postContent.imageData}}>
+            <h5>
+                by user {{entry.userName}}
+                <span style="float:right;">
+                    tagged: {{entry.tag}}
+                </span>
+            </h5>
+            <div  style="text-align:center;">
+                <img src={{entry.postContent.imageData}}>
+            </div>
             <div>{{entry.postContent.text}}</div>
+            <!--<p markdown-to-html={{entry.postContent.text}}></p>
+            <p markdown-to-html="### TEST"></p>-->
           </div>
       </li>
   </ul>
