--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -11,7 +11,7 @@
             <div  style="text-align:center;">
                 <img src={{entry.postContent.imageData}}>
             </div>
-            <div>{{entry.postContent.text | markdownTranslater}}</div>
+            <div [innerHTML]="entry.postContent.text | markdownTranslater"></div>
           </div>
       </li>
   </ul>
