--- a/src/app/posts/posts.component.css
+++ b/src/app/posts/posts.component.css
@@ -2,8 +2,8 @@
     margin: 0 0 2em 0;
     list-style-type: none;
     padding: 0;
-    width: 50em;
-    border-width: 7px;
+    width: 65em;
+    border-width: 3px;
     border-style: solid;
     border-color: #1C6EA4;
     border-radius: 4px;
@@ -11,14 +11,18 @@
   }
 .posts li {
     position: relative;
-    /*background-color: #EEE;*/
-    margin: .5em;
+    /*margin: .5em;*/
+    margin: .5em .5em 1.5em .5em;
     padding: .3em 0;
-    /*height: 1.6em;
-    //border-radius: 4px;*/
+    border-radius: 1px;
     border-width: 5px;
-    border-style: ridge;
-    border-color: #1C6EA4;
+    border-style: solid;
+    border-color:rgba(28,110,164,0.44);
+    box-shadow:
+    0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+    0 6.7px 5.3px rgba(0, 0, 0, 0.048),
+    0 12.5px 10px rgba(0, 0, 0, 0.06),
+    0 22.3px 17.9px rgba(0, 0, 0, 0.072);
 }
 .card {
   padding-top: 10px;
@@ -31,4 +35,14 @@ img {
     height: auto;
     padding-right: 20px;
     padding-left: 20px;
+}
+hr { 
+  display: block;
+  margin-top: 0.1em;
+  margin-bottom: 1.5em;
+  margin-left: 0;/*auto;*/
+  margin-right: 0;/*auto;*/
+  border-style: solid;
+  border-width: 2px;
+  border-color: rgba(28,110,164,0.44);
 }
