--- a/src/app/posts/posts.component.css
+++ b/src/app/posts/posts.component.css
@@ -11,7 +11,6 @@
   }
 .posts li {
     position: relative;
-    /*margin: .5em;*/
     margin: .5em .5em 1.5em .5em;
     padding: .3em 0;
     border-radius: 1px;
@@ -40,8 +39,8 @@ hr {
   display: block;
   margin-top: 0.1em;
   margin-bottom: 1.5em;
-  margin-left: 0;/*auto;*/
-  margin-right: 0;/*auto;*/
+  margin-left: 0;
+  margin-right: 0;
   border-style: solid;
   border-width: 2px;
   border-color: rgba(28,110,164,0.44);
