--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,22 +1,23 @@
 <label class="hoverable" for="fileInput">
-  <img [src]=" url ? url : 'https://www.w3schools.com/howto/img_avatar.png'">
+  <img [src]="base64Image ? base64Image : 'https://www.w3schools.com/howto/img_avatar.png' ">
   <div class="hover-text">Choose file</div>
   <div class="background"></div>
 </label>
 <br/>
 <input id="fileInput" type='file' (change)="onSelectFile($event)">
-<button *ngIf="url" (click)="delete()" >delete</button>
+<button *ngIf="base64Image" (click)="delete()" >delete</button>
 <div class="container">
   <div class="column">
     <div class="x12">
       <label>First Name:</label>
-      <input type = 'text' >
+      <input type = 'text' class="form-control" [(ngModel)]="firstName">
       <hr>
       <label>Last Name:</label>
-      <input type = "text" class="form-control" >
+      <input type = "text" class="form-control" [(ngModel)]="lastName">
       <hr>
       <button
       class="btn btn-primary"
+      [disabled]="firstName === '' || lastName === ''"
       (click)="onSave()">Save Profile</button>
       <button (click)="goBack()">go back</button>
     </div>
