basic  structure and css

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 <div class="toolbar" role="banner">
 
   <div class="spacer"></div>
-  <span>GJ Blog</span>
+  <span>Pigeonholed</span>
   <div class="spacer"></div>
 
 </div>
@@ -11,6 +11,7 @@
     <nav>
       <a routerLink="/profile">Profile</a>
       <a routerLink="/home">Home</a>
+      <a routerLink="/newpost">New Blog Post</a>
     </nav>
     <router-outlet></router-outlet>
 </div>
