--- a/src/app/new-post/new-post.component.html
+++ b/src/app/new-post/new-post.component.html
@@ -1,10 +1,12 @@
 <p>Input Your New Post Information Below</p>
-<form>
-  <p>Title:<input type="text" id="postTitle"></p>
-  <p>Username:<input type ="text" id="postUsername"></p>
-  <p>Tag:<input type ="text" id="postTag"></p>
-  <p>Post Content (Markdown or Text):<textarea type ="text" id="postText"></textarea></p>
-  <p>Image:<input type="file" name="image" id="image" (change)="onFileChanged($event)"/></p>
 
-  </form>
+<form >
+  <p>Title:<input type="text" id="postTitle"></p>
+  <p>Username:<input [(ngModel)]="post.userName" name="userName" type ="text" id="postUsername"></p>
+  <p>Tag:<input [(ngModel)]="post.tag" name="tag" type ="text" id="postTag"></p>
+  <p>Post Content (Markdown or Text):<textarea [(ngModel)]="post.postContent.text" name="text" type ="text" id="postText"></textarea></p>
+  <p>Image:<input #imageInput type="file" accept="image/*"name="image" id="image" (change)="onFileChanged($event)"/></p>
+</form>
 <button (click)="onClickSubmit()">Submit New Post</button>
+
+
