authentication functioning sans profile service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,8 @@
       <a routerLink="/profile">Profile</a>
       <a routerLink="/home">Home</a>
       <a routerLink="/newpost">New Blog Post</a>
+      <a routerLink="/login">Login</a>
+      <a routerLink="/register">Register New User</a>
     </nav>
     <router-outlet></router-outlet>
 </div>
