--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -6,3 +6,20 @@
   flex-direction: column;
   align-items: center;
 }
+
+.posts{
+  float:right;
+  width:600px;
+  height:850px;
+  align-items: center;
+  padding-top: -15%;
+}
+.tags {
+  margin-left:-45%;
+  /* margin-right:auto;
+  padding: -20%;
+  display:table;
+  height:80px; */
+  overflow:hidden;
+}
+
