--- a/src/app/tags/tags.component.html
+++ b/src/app/tags/tags.component.html
@@ -7,7 +7,7 @@
   </li>
 </ul>
 
-<ul *ngIf="selectedTag" class="posttags">
+<!-- <ul *ngIf="selectedTag" class="posttags">
   <li *ngFor = "let post of postsbyTag">
         <div class="card">
           <h2>Post # {{post.post_Id}}</h2>
@@ -23,4 +23,4 @@
           <div [innerHTML]="post.postContent.text | markdownTranslater"></div>
         </div>
   </li>
-</ul>
+</ul> -->
