--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
   <app-tags></app-tags>
 </div>
 <!-- <div class="container1"> -->
-  <div class="posts">
+  <div class="posts" hidden = "{{ isHidePosts }}">
     <app-posts></app-posts>
   </div>
 
