moved tag to tagservice

--- a/src/app/posts/posts.component.css
+++ b/src/app/posts/posts.component.css
@@ -58,6 +58,7 @@ img {
     border-color: #1C6EA4;
     border-radius: 4px;
     background-color: #f1f1f1;
+    margin-top: -40px;
   }
 .posts li {
     position: relative;
