--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,8 +1,15 @@
 .container1 {
   display: flex;
-  margin: 82px auto 32px;
+  margin: 22px auto 12px;
   padding: 0 16px;
   max-width: 960px;
   flex-direction: column;
+  align-items: center;
+}
+.tags {
+  margin: 22px auto 12px;
+  padding: 0 16px;
+  max-width: 960px;
+  flex-direction: row;
   align-items: center;
 }
