refined headers and page content

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,6 +13,7 @@
   <a routerLink="/login">Login</a>
   <a routerLink="/profile">Profile</a>
   <a routerLink="/register">Register New User</a>
+  <a role="button" (click)="logout()">Logout</a>
 </nav>
 </div>
 <div class="content" role="main">
