--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,3 +1,4 @@
+<div class="profile">
 <label class="hoverable" for="fileInput">
   <img [src]="base64Image ? base64Image : 'https://www.w3schools.com/howto/img_avatar.png' ">
   <div class="hover-text">Choose file</div>
@@ -23,4 +24,4 @@
     </div>
 
   </div>
-
+</div>
