--- a/src/app/tag-page/tag-page.component.html
+++ b/src/app/tag-page/tag-page.component.html
@@ -5,7 +5,7 @@
         <li *ngFor = "let post of postFromTag">
 
               <div class="card">
-                <h2>Post # {{post.post_Id}}</h2>
+                <h2>{{post.title}}</h2>
                 <h5>
                     by user {{post.userName}}
                     <span style="float:right;">
