--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -166,6 +166,7 @@ a:hover {
 a:hover {
   color: #125699;
 }
+
 /*
 .terminal {
   position: relative;
@@ -235,7 +236,7 @@ svg#clouds {
 }
 */
 
-/* Responsive Styles 
+/* Responsive Styles
 @media screen and (max-width: 767px) {
 
   .card-container > *:not(.circle-link) ,
@@ -269,6 +270,13 @@ svg#clouds {
   margin-bottom: 40px;
   margin-left: 10px;
 }
+
+a[role='button']{
+  color: #334953;
+  text-decoration: none;
+  cursor:pointer;
+}
+
 nav a {
 padding: 5px 30px;
 text-decoration: none;
@@ -278,7 +286,7 @@ display: inline-block;
 background-color: #eee;
 border-radius: 4px;
 }
-nav a:visited, a:link {
+nav a:visited, a:link{
 color: #334953;
 }
 nav a:hover {
