--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,7 +22,10 @@
 
 </div>
 <footer>
-  <p><a href="mailto:hege@example.com">See our Github!</a></p>
+  <div class="spacer"></div>
+  <h4>Checkout Our Githubs:&nbsp;&nbsp;</h4>
+  <a class="link" href="https://github.com/jyothi14691/Full-Stack-Frontend">FrontEnd&nbsp;&nbsp;</a>
+  <a class="link" href="https://github.com/jyothi14691/GJ-Blog">BackEnd&nbsp;&nbsp;</a>
 </footer>
 
 
