--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -44,7 +44,6 @@ p {
   height: 60px;
   display: flex;
   align-items: center;
-  /*background-color: #1976d2;*/
   background-image: linear-gradient(#196ABB, #437db8);
   color: #FCF8E7;
   font-weight: 900;
@@ -76,7 +75,6 @@ p {
 .content {
   display: flex;
   margin: -70px auto 32px;
-  /*padding: 0 16px;*/
   max-width: 960px;
   flex-direction: column;
   align-items: center;
@@ -91,71 +89,6 @@ svg.material-icons:not(:last-child) {
   margin-right: 8px;
 }
 
-/*
-.card svg.material-icons path {
-  fill: #888;
-}
-
-.card-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  margin-top: 16px;
-}
-
-.card {
-  border-radius: 4px;
-  border: 1px solid #eee;
-  background-color: #fafafa;
-  height: 40px;
-  width: 200px;
-  margin: 0 8px 16px;
-  padding: 16px;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  transition: all 0.2s ease-in-out;
-  line-height: 24px;
-}
-
-.card-container .card:not(:last-child) {
-  margin-right: 0;
-}
-
-.card.card-small {
-  height: 16px;
-  width: 168px;
-}
-
-.card-container .card:not(.highlight-card) {
-  cursor: pointer;
-}
-
-.card-container .card:not(.highlight-card):hover {
-  transform: translateY(-3px);
-  box-shadow: 0 4px 17px rgba(0, 0, 0, 0.35);
-}
-
-.card-container .card:not(.highlight-card):hover .material-icons path {
-  fill: rgb(105, 103, 103);
-}
-
-.card.highlight-card {
-  background-color: #1976d2;
-  color: white;
-  font-weight: 600;
-  border: none;
-  width: auto;
-  min-width: 30%;
-  position: relative;
-}
-
-.card.card.highlight-card span {
-  margin-left: 60px;
-}
-*/
-
 a,
 a:visited,
 a:hover {
@@ -167,57 +100,21 @@ a:hover {
   color: #125699;
 }
 
-/*
-.terminal {
-  position: relative;
-  width: 80%;
-  max-width: 600px;
-  border-radius: 6px;
-  padding-top: 45px;
-  margin-top: 8px;
-  overflow: hidden;
-  background-color: rgb(15, 15, 16);
-}
-
-.terminal::before {
-  content: "\2022 \2022 \2022";
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 4px;
-  background: rgb(58, 58, 58);
-  color: #c2c3c4;
-  width: 100%;
-  font-size: 2rem;
-  line-height: 0;
-  padding: 14px 0;
-  text-indent: 4px;
-}
-
-.terminal pre {
-  font-family: SFMono-Regular,Consolas,Liberation Mono,Menlo,monospace;
-  color: white;
-  padding: 0 1rem 1rem;
-  margin: 0;
-}
-*/
-
 footer {
   margin-top: 8px;
   display: flex;
   align-items: right;
   line-height: 50px;
   color:#FCF8E7;
-  background-color: #125699;
-  /*background-image: url(../assets/tracks-small.png)*/
+  background-image: linear-gradient(#196ABB, #0b3866);
 }
-/*
+
 .pigeontracks{
-  background-image: url(../assets/pigeonCrop.png);
-  width:75px;
+  background-image: url(../assets/track.png);
+  width:150px;
   height: 35px;
   padding: 0px 10px 0px -20px;
-}*/
+}
 
 footer a.link{
   color:#FCF8E7;
@@ -225,50 +122,6 @@ footer a.link{
   font-style: italic;
 }
 
-/*footer a:link{
-  /*display: flex;
-  align-items: center;
-  color:#FCF8E7;
-}*/
-/*
-svg#clouds {
-  position: fixed;
-  bottom: -160px;
-  left: -230px;
-  z-index: -10;
-  width: 1920px;
-}
-*/
-
-/* Responsive Styles
-@media screen and (max-width: 767px) {
-
-  .card-container > *:not(.circle-link) ,
-  .terminal {
-    width: 100%;
-  }
-
-  .card:not(.highlight-card) {
-    height: 16px;
-    margin: 8px 0;
-  }
-
-  .card.highlight-card span {
-    margin-left: 72px;
-  }
-
-  svg#rocket-smoke {
-    right: 120px;
-    transform: rotate(-5deg);
-  }
-}*/
-
-/*@media screen and (max-width: 575px) {
-  svg#rocket-smoke {
-    display: none;
-    visibility: hidden;
-  }
-}*/
 .navbar{
   margin-top:-40px;
   margin-bottom: 40px;
